// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render nested 1`] = `
<h1
  className="styled-H1-1f87tx4 css-dabj7x1"
>
  hello world
</h1>
`;

exports[`styled name 1`] = `
<h1
  className="styled-FancyH1-131pfth css-dabj7x2"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
<h1
  className="styled-H1-ijh7uz css-dabj7x0"
>
  hello world
</h1>
`;

exports[`styled writes the correct css 1`] = `
".styled-H1-ijh7uz {
    font-size: 12px
}
.styled-H1-1f87tx4 {
    font-size: 20px
}
.styled-H1-1f87tx4 span {
    color: blue
}
.styled-H1-1f87tx4 span:hover {
    color: green
}
.styled-H1-1f87tx4 span:hover:after {
    content: \\"after\\"
}
.styled-FancyH1-131pfth {
    name: FancyH1;
    font-size: 38px
}
html {
    background: pink
}
.css-14yvnlz {
    font-family: sans-serif;
    color: yellow;
    background-color: purple
}"
`;
